Alignment Fix

--- a/style.css
+++ b/style.css
@@ -1650,9 +1650,9 @@ nav {
 
   footer {
     margin-top: 10%;
-    width: 60%;
-    padding-left: 20%;
-    padding-right: 20%;
+    width: 70%;
+    padding-left: 15%;
+    padding-right: 15%;
   }
 }
 /*
